@@ -34,8 +34,11 @@ func (l *CheckOSVersion) Build() *CheckData {
 			{name: "platform", description: "Platform of the OS"},
 			{name: "family", description: "OS Family"},
 			{name: "version", description: "Full version number"},
-			{name: "arch", description: "OS architecture"},
+			{name: "arch", description: "OS architecture (go arch, ex.: amd64)"},
 			{name: "os", description: "OS name"},
+			{name: "hostname", description: "hostname (probably without fqdn)"},
+			{name: "kernel_arch", description: "kernel architecture, ex.: x86_64"},
+			{name: "kernel_version", description: "kernel version"},
 		},
 		exampleDefault: `
     check_os_version
@@ -57,12 +60,20 @@ func (l *CheckOSVersion) Check(ctx context.Context, _ *Agent, check *CheckData, 
 		}
 	}
 
+	hostInfo, err := host.InfoWithContext(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("failed to get host information: %s", err.Error())
+	}
+
 	check.listData = []map[string]string{{
-		"platform": platform,
-		"family":   family,
-		"version":  version,
-		"arch":     runtime.GOARCH,
-		"os":       runtime.GOOS,
+		"platform":       platform,
+		"family":         family,
+		"version":        version,
+		"arch":           runtime.GOARCH,
+		"os":             runtime.GOOS,
+		"hostname":       hostInfo.Hostname,
+		"kernel_version": hostInfo.KernelVersion,
+		"kernel_arch":    hostInfo.KernelArch,
 	}}
 
 	v := convert.VersionF64(version)
