@@ -9,6 +9,7 @@ next:
          - fix timeout race condition when rebooting windows service
          - change handling exporter arguments and keep quotes
          - change handling allias/script arguments and keep quotes
+         - check_os_version: add kernel version/arch/hostname
 
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
